--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,10 +1,10 @@
 .hero {
 	height: 100vh;
 	background: linear-gradient(
-			rgba($text-color, 0.4),
-			rgba($secondary-color, 0.2)
+			rgba($text-color, 0.5),
+			rgba($secondary-color, 0.1)
 		),
-		url("../img/hero5.jpg") no-repeat center;
+		url("../img/hero5.jpg") no-repeat top right;
 	background-size: cover;
 	position: relative;
 	padding: 10vh 0;
@@ -36,13 +36,13 @@
 		.hero-button {
 			.button {
 				letter-spacing: 1px;
-				background: $secondary-color;
-				color: $text-color;
-				border: 1px solid $secondary-color;
+				background: $primary-color;
+				color: $text-rev;
+				border: 1px solid $primary-color;
 				font-weight: 900;
 				&:hover {
-					background: $primary-color;
-					color: $text-rev;
+					background: $text-rev;
+					color: $primary-color;
 					border: 1px solid $primary-color;
 				}
 			}
