--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -29,13 +29,13 @@
 			}
 			.button {
 				letter-spacing: 1px;
-				background: $secondary-color;
-				color: $text-color;
-				border: 1px solid $secondary-color;
+				background: $primary-color;
+				color: $text-rev;
+				border: 1px solid $primary-color;
 				font-weight: 900;
 				&:hover {
-					background: $primary-color;
-					color: $text-rev;
+					background: $text-rev;
+					color: $primary-color;
 					border: 1px solid $primary-color;
 				}
 			}
