--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,6 @@
 .sticky-mobile {
 	background: $secondary-color;
-	color: $text-color;
+	color: $text-rev;
 	width: 100vw;
 	max-height: 53px;
 	position: fixed;
@@ -32,7 +32,7 @@
 }
 
 .footer {
-	background: $primary-color;
+	background: $secondary-color;
 	color: $text-rev;
 	font-size: 0.8rem;
 	font-weight: 500;
