--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,9 @@
-$primary-color: #3c40c6;
+// $primary-color: #3c40c6;
+$primary-color: #05386b;
 // $primary: $primary-color !default;
 // $secondary-color: #ffa801;
-$secondary-color: #586261;
-// $secondary-color: #797979;
+// $secondary-color: #586261;
+$secondary-color: #379683;
 // $secondary-color: #fce205;
 $warning: #ff2400;
 $text-color: #1e272e;
