--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Lobster|Montserrat&display=swap");
 @import "./variables";
 @import "./global";
 @import "./navbar";
