hero overlay configured

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -25,7 +25,7 @@
 	border: 1px solid $primary-color;
 	border-radius: 2rem;
 	box-shadow: 3px 0px 8px 2px $shad;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	// clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
 	// clip-path: polygon(
 	// 	0% 20%,
