--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,7 @@ $primary-color: #05386b;
 $secondary-color: #379683;
 // $secondary-color: #fce205;
 $warning: #ff2400;
+$overlay: #5cdb95;
 $text-color: #1e272e;
 $text-rev: #f2f2f2;
 $white: #fff;
