--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,9 +1,6 @@
 .hero {
 	height: 100vh;
-	background: linear-gradient(
-			rgba($primary-color, 0.4),
-			rgba($secondary-color, 0.4)
-		),
+	background: linear-gradient(rgba($secondary-color, 0.6)),
 		url("../img/hero5.jpg") no-repeat top;
 	background-size: cover;
 	background-attachment: fixed;
