new fonts added

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -63,7 +63,7 @@
 				}
 			}
 			.button-second {
-				background: $background;
+				background: $white;
 				// box-shadow: 3px 0px 4px 0px $shad;
 				border: 1px solid $primary-color;
 				color: $primary-color;
