why-us designed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,7 +6,7 @@
 @import "./hero";
 @import "./feature";
 @import "./h-works";
-// @import "./service";
+@import "./why-us";
 @import "./contact";
 @import "./area-cover";
 @import "./footer";
