--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -5,7 +5,7 @@
 		font-weight: 900;
 		color: $primary-color;
 		text-transform: uppercase;
-		text-align: center;
+		// text-align: center;
 		letter-spacing: 2px;
 		font-family: "Josefin Sans", sans-serif;
 	}
@@ -84,8 +84,4 @@
 		font-weight: 300;
 		font-size: 0.5rem;
 	}
-}
-
-.map {
-	padding-bottom: 10vh;
 }
