--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,6 +2,7 @@
 	padding: 0 0 30px 0;
 	h1 {
 		font-size: 2.5rem;
+		line-height: 3.5rem;
 		font-weight: 900;
 		color: $primary-color;
 		text-transform: uppercase;
