--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./feature";
 @import "./h-works";
 @import "./why-us";
+@import "./what-we-do";
 @import "./contact";
 @import "./area-cover";
 @import "./footer";
@@ -41,8 +42,8 @@ body {
 	}
 }
 ::selection {
-	color: $text-color;
-	background: $secondary-color;
+	color: $text-rev;
+	background: $primary-color;
 }
 
 .light {
