process added and designed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./h-works";
 @import "./why-us";
 @import "./what-we-do";
+@import "./process";
 @import "./contact";
 @import "./area-cover";
 @import "./footer";
