--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import "./why-us";
 @import "./what-we-do";
 @import "./process";
+@import "./experience";
 @import "./contact";
 @import "./area-cover";
 @import "./footer";
