--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,5 @@
 .sticky-mobile {
-	background: $primary-color;
+	background: $secondary-color;
 	color: $text-rev;
 	width: 100vw;
 	max-height: 53px;
@@ -32,12 +32,12 @@
 }
 
 .footer {
-	background: $primary-color;
+	background: $secondary-color;
 	color: $text-rev;
 	font-size: 0.8rem;
 	font-weight: 500;
 	padding: 15px 0;
-	margin: -1px 0;
+	// margin: -1px 0;
 	p {
 		margin: 0;
 	}
