--- a/scss/_experience.scss
+++ b/scss/_experience.scss
@@ -15,9 +15,9 @@
 		color: $text-color;
 	}
 	.ec-iconbox {
-		padding: 1.2rem 0;
+		padding: 1rem 0;
 		.ec-icon-holder {
-			margin: 0.5rem 0 1rem 0;
+			margin: 0.5rem 0;
 		}
 		.ec-icon-heading {
 			color: $primary-color;
