page-header added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,8 @@
 @import "./contact";
 @import "./area-cover";
 @import "./footer";
-// @import "./page-header";
+@import "./page-header";
+@import "./privacy";
 @import "./media";
 
 * {
